<resources>
    <string name="app_name">LoginRegistrationMVVMdemo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>


    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register_user">Sign Up</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to Registration Form -->

    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_city">City</string>
    <string name="prompt_pincode">Pincode</string>
    <string name="prompt_already_account">Already have an account? Login here</string>
    <string name="prompt_signup">Sign Up</string>

    <string name="invalid_fullname">Not a valid name</string>
    <string name="invalid_mobile">Not a valid 10 digit mobile number</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_match_password">Password &amp; Confirm password must be match</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="registration_success">"New user created!"</string>

</resources>
